--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -94,6 +94,8 @@ components:
             $ref: '#/components/schemas/IntegrationField'
         optionalFieldsAuto:
           $ref: '#/components/schemas/OptionalFieldsAutoOption'
+        selectedFieldsAuto:
+          $ref: '#/components/schemas/SelectedFieldsAutoOption'
         backfill:
           $ref: '#/components/schemas/Backfill'
         delivery:
@@ -203,6 +205,10 @@ components:
           type: string
 
     OptionalFieldsAutoOption:
+      type: string
+      enum: [all]
+
+    SelectedFieldsAutoOption:
       type: string
       enum: [all]
 
