--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -224,6 +224,8 @@ components:
           type: string
         mapToField:
           type: string
+          description: The field name to map to in the destination.
+          example: account_id
 
     IntegrationFieldMapping:
       type: object
