that's not how you spell mapToName

--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -222,7 +222,7 @@ components:
       properties:
         fieldName:
           type: string
-        mapToField:
+        mapToName:
           type: string
           description: The field name to map to in the destination.
           example: account_id
