--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1203,7 +1203,7 @@ paths:
           content:
             application/problem+json:
               schema:
-                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"  
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /projects/{projectIdOrName}/operations/{operationId}/logs:
     get:
       summary: List logs for an operation
@@ -2377,9 +2377,9 @@ paths:
             application/problem+json:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
-  /billingAccounts/{billingAccountId}/session:
+  /billingAccounts/{billingAccountId}/portalSession:
     post:
-      summary: Create a session for a billing account
+      summary: Create a portal session for a billing account
       operationId: createBillingAccountSession
       tags: [ "Billing Account" ]
       parameters:
@@ -2398,20 +2398,26 @@ paths:
               properties:
                 redirectUrl:
                   type: string
-                  description: The URL to redirect to once a session is exited.
+                  description: The URL to redirect to once a portal session is exited.
                   example: https://dashboard.withampersand.com/the-current-page
                 timeout:
                   type: integer
-                  description: The number of seconds before the session expires.
+                  description: The number of seconds before the portal session expires.
                   example: 3600
       responses:
         200:
           description: OK
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-                example: https://billing.portal.com/customer/session
+                type: object
+                required:
+                  - url
+                properties:
+                  url:
+                    type: string
+                    description: The URL to redirect to in order to start the portal session.
+                    example: https://billing.portal.com/customer/session
         default:
           description: Error
           content:
