add more fields for builder-defined mapped objects

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -50,6 +50,14 @@ components:
           type: string
           x-oapi-codegen-extra-tags:
             validate: required
+        mapToName:
+          type: string
+          description: An object name to map to in the destination.
+          example: people
+        mapToDisplayName:
+          type: string
+          description: A display name to map to in the destination.
+          example: People
         schedule:
           type: string
           description: The schedule for reading the object, in cron syntax.
