--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -88,10 +88,12 @@ components:
           type: string
           description: An object name to map to in the destination.
           example: people
+          x-go-type-skip-optional-pointer: true
         mapToDisplayName:
           type: string
           description: A display name to map to in the destination.
           example: People
+          x-go-type-skip-optional-pointer: true
         requiredFields:
           type: array
           items:
