--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -272,6 +272,11 @@ components:
       properties:
         fieldName:
           type: string
+        mapToName:
+          type: string
+          description: The field name to map to in the destination.
+          example: account_id
+          x-go-type-skip-optional-pointer: true
         displayName:
           type: string
 
