[ENG-1702] feat: Add deliver results on request endpoint (#76)
* feat: Add deliver results on request endpoint

* Update api/generated/read.json

* Update api/read.yaml

* update

---------

Co-authored-by: Lauren Long <laurenzlong@users.noreply.github.com>

--- a/api/read.yaml
+++ b/api/read.yaml
@@ -5,10 +5,65 @@ info:
 servers:
   - url: https://read.withampersand.com/v1
 paths:
-  /projects/{projectIdOrName}/integrations/{integrationId}/objects/{objectName}:
+  # /projects/{projectIdOrName}/integrations/{integrationId}/objects/{objectName}:
+  #   post:
+  #     summary: Read records
+  #     operationId: readRecords
+  #     tags: ["Read"]
+  #     parameters:
+  #       - name: projectIdOrName
+  #         in: path
+  #         required: true
+  #         schema:
+  #           type: string
+  #       - name: integrationId
+  #         in: path
+  #         required: true
+  #         schema:
+  #           type: string
+  #       - name: objectName
+  #         in: path
+  #         required: true
+  #         schema:
+  #           type: string
+  #     requestBody:
+  #       description: Read Request
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: "#/components/schemas/ReadRequest"
+  #     responses:
+  #       201:
+  #         description: The success response
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/ReadResultAsync"
+  #       400:
+  #         description: The failure response for bad request.
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+  #       500:
+  #         description: Internal server error
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+  #       default:
+  #         description: Error
+  #         content:
+  #           application/problem+json:
+  #             schema:
+  #               $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
+
+  /projects/{projectIdOrName}/integrations/{integrationId}/objects/{objectName}:deliverResults:
     post:
-      summary: Read records
-      operationId: readRecords
+      summary: Deliver results
+      description:
+        If a read action has delivery mode to onRequest, then use this endpoint to request for more results.
+      operationId: deliverResults
       tags: ["Read"]
       parameters:
         - name: projectIdOrName
@@ -27,18 +82,14 @@ paths:
           schema:
             type: string
       requestBody:
-        description: Read Request
+        description: ResultDeliveryRequestBody
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ReadRequest"
+              $ref: "#/components/schemas/ResultDeliveryRequestBody"
       responses:
-        201:
+        204:
           description: The success response
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ReadResultAsync"
         400:
           description: The failure response for bad request.
           content:
@@ -57,7 +108,6 @@ paths:
             application/problem+json:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
-
 components:
   schemas:
     ReadRequest:
@@ -89,6 +139,21 @@ components:
           type: string
           description: The operation ID
           example: 60deaf48-3856-4a2b-bfd4-3de85125eca8
+    ResultDeliveryRequestBody:
+      required:
+        - groupRef
+        - pages
+      type: object
+      properties:
+        groupRef:
+          type: string
+          description:
+            The ID of the user group whose SaaS instance you'd like to receive results from. This is the ID that was provided
+            during installation creation.
+        pages:
+          type: integer
+          description: The number of pages you are ready to receive from the group's SaaS instance.
+          minimum: 0
   securitySchemes:
     APIKeyHeader:
       type: apiKey
