feat: Add link to delivery modes

--- a/api/read.yaml
+++ b/api/read.yaml
@@ -62,7 +62,8 @@ paths:
     post:
       summary: Deliver results
       description:
-        If a read action has delivery mode to onRequest, then use this endpoint to request for more results.
+        If a read action has delivery mode set to onRequest, then use this endpoint to request for more results.
+        Learn more in [Delivery modes](https://docs.withampersand.com/define-integrations/read-actions#delivery-modes).
       operationId: deliverResults
       tags: ["Read"]
       parameters:
