--- a/.github/workflows/rdme-openapi-deploy.yml
+++ b/.github/workflows/rdme-openapi-deploy.yml
@@ -13,7 +13,7 @@ on:
       - 'api/**'
 
 jobs:
-  rdme-openapi:
+  rdme-openapi-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo 📚
