Revert "add jwt authtype (#79)"
This reverts commit 15e72e1bb204f69814af56238a77ef069ec1d876.

--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -20,7 +20,7 @@ components:
     AuthType:
       description: The type of authentication required by the provider.
       type: string
-      enum: [oauth2, apiKey, basic, jwt, none]
+      enum: [oauth2, apiKey, basic, none]
       x-oapi-codegen-extra-tags:
         validate: required
 
