update description of generateConnection endpoint

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1524,7 +1524,8 @@ paths:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /projects/{projectIdOrName}/connections:generate:
     post:
-      summary: Generate a new connection (only valid for providers with auth types which are not OAuth2 Authorization Code)
+      summary: Generate a new connection
+      description: This endpoint is only valid for providers with auth types which are not OAuth2 Authorization Code.
       operationId: generateConnection
       tags: ["Connection"]
       parameters:
