--- a/config/config.yaml
+++ b/config/config.yaml
@@ -72,6 +72,20 @@ components:
           example: '{ phoneNumber: phone, faxNumber: fax }'
           additionalProperties:
             type: string
+        selectedValueMappings:
+          type: object
+          description: A container for read and write value mappings.
+          properties:
+            read:
+              type: object
+              description: This is a map of field names to their value mappings.
+              additionalProperties:
+                $ref: '#/components/schemas/ValueMappings'
+            write:
+              type: object
+              description: This is a map of field names to their value mappings.
+              additionalProperties:
+                $ref: '#/components/schemas/ValueMappings'
         selectedFieldsAuto:
           $ref: '#/components/schemas/SelectedFieldsAutoConfig'
         backfill: 
@@ -188,3 +202,50 @@ components:
           example: false
           x-oapi-codegen-extra-tags:
             validate: required_without=Days
+
+    ValueMappings:
+      description: A collection of value mappings.
+      type: array
+      items:
+        $ref: '#/components/schemas/SingleValueMapping'
+
+    SingleValueMapping:
+      type: object
+      description: A single value mapping. Eventually, this will be expanded to include more complex mappings.
+      discriminator:
+        propertyName: type
+        mapping:
+          stringReplacement: '#/components/schemas/StringReplacementMapping'
+      oneOf:
+        - $ref: '#/components/schemas/StringReplacementMapping'
+
+    StringReplacementMapping:
+      type: object
+      example:
+        type: stringReplacement
+        caseSensitive: false
+        fromValue: 'old'
+        toValue: 'new'
+      required:
+        - fromValue
+        - toValue
+        - type
+      properties:
+        type:
+          type: string
+          description: The type of mapping. Used by SingleValueMapping to determine which schema to use.
+          enum:
+            - 'stringReplacement'
+          example: stringReplacement
+        caseSensitive:
+          type: boolean
+          nullable: true
+          description: Whether the 'from' value is matched as case sensitive (default is true).
+        fromValue:
+          type: string
+          nullable: true
+          description: The starting value (may be null, which will match null values).
+        toValue:
+          type: string
+          nullable: true
+          description: The ending value (may be null, which will substitute a literal null).
