[ENG-1636] feat: rename `inheritMappingFromRead` to `inheritMapping`

--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -119,7 +119,7 @@ components:
       properties:
         objectName:
           type: string
-        inheritMappingFromRead:
+        inheritMapping:
           type: boolean
           description: If true, the write object will inherit the mapping from the read object. If false, the write object will have no mapping.
           example: true
